--- a/cog_bibliography.bib
+++ b/cog_bibliography.bib
@@ -208,4 +208,35 @@
   year   = {2017},
 }
 
+@InProceedings{malinowski2014multi,
+  author    = {Malinowski, Mateusz and Fritz, Mario},
+  title     = {A multi-world approach to question answering about real-world scenes based on uncertain input},
+  booktitle = {Advances in neural information processing systems},
+  year      = {2014},
+  pages     = {1682--1690},
+}
+
+@InProceedings{karpathy2015deep,
+  author    = {Karpathy, Andrej and Fei-Fei, Li},
+  title     = {Deep visual-semantic alignments for generating image descriptions},
+  booktitle = {Proceedings of the IEEE conference on computer vision and pattern recognition},
+  year      = {2015},
+  pages     = {3128--3137},
+}
+
+@InProceedings{MovieQA,
+  author    = {Makarand Tapaswi and Yukun Zhu and Rainer Stiefelhagen and Antonio Torralba and Raquel Urtasun and Sanja Fidler},
+  title     = {{MovieQA: Understanding Stories in Movies through Question-Answering}},
+  booktitle = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+  year      = {2016},
+}
+
+@Article{monfort2019moments,
+  author    = {Monfort, Mathew and Andonian, Alex and Zhou, Bolei and Ramakrishnan, Kandan and Bargal, Sarah Adel and Yan, Yan and Brown, Lisa and Fan, Quanfu and Gutfreund, Dan and Vondrick, Carl and others},
+  title     = {Moments in time dataset: one million videos for event understanding},
+  journal   = {IEEE transactions on pattern analysis and machine intelligence},
+  year      = {2019},
+  publisher = {IEEE},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
