--- a/2019_neurips_vigil/vigil_2019_main.tex
+++ b/2019_neurips_vigil/vigil_2019_main.tex
@@ -111,12 +111,12 @@
 \begin{abstract}
 Visual reasoning in videos requires understanding temporal concepts in addition to the objects and their relations in a given frame.  
 %Selective attention and memory are the essential faculties, which humans rely on to accomplish this task.  
-In analogy with human reasoning, we present Selective Attention Memory network (SAMNet), an end-to-end differentiable recurrent 
+In analogy with human reasoning, we present Selective Attention Memory Network (SAMNet), an end-to-end differentiable recurrent 
 model equipped with external memory.  
 SAMNet can perform multi-step reasoning on a frame-by-frame basis, and dynamically control information flow to the memory 
 to store context-relevant representations to answer questions. 
 We tested our model on the COG dataset (a multi-frame visual question answering test), and outperformed the state of 
-the art baseline for hard tasks and in terms of generalization.
+the art baseline for hard tasks and in terms of generalization over video length and scene complexity.
 %	We introduce the Selective Attention Memory Network (SAMNet), a end-to-end differentiable architecture for video reasoning. It is a recurrent model with an external memory that enables frame by frame reasoning over text and video. 
 %		We show SAMNet's abilities on the COG dataset made for Video Question Answering (Guangyu Robert Yang, Igor Ganichev et al., ECCV 2018). We compare our model to the original COG model and show that SAMNet outperforms the COG model especially on the hardest version of the dataset with longer sequences and a maximum number of distractors. We also demonstrate that our model has good generalization capabilities going from easy to hard tasks.
 \end{abstract}
