--- a/2019_neurips_vigil/vigil_2019_main.tex
+++ b/2019_neurips_vigil/vigil_2019_main.tex
@@ -102,7 +102,7 @@
 \newcommand{\whead}{wh}
 
 
-\title{Visually Grounded Reasoning about Temporal Concepts in Selective Attention Memory}
+\title{Visually Grounded Video Reasoning in Selective Attention Memory}
 
 \author{T.S. Jayram, Vincent Albouy, Tomasz Kornuta, Emre Sevgen, Ahmet Ozcan}
 
@@ -125,7 +125,7 @@ the art baseline for hard tasks and in terms of generalization over video length
 \input{model}
 \input{experiments}
 \newpage
-\bibliographystyle{alpha}
+\bibliographystyle{abbrv}
 \bibliography{../cog_bibliography}
 \newpage
 \input{appendix_model}
