--- a/cog_bibliography.bib
+++ b/cog_bibliography.bib
@@ -1,4 +1,13 @@
 % Encoding: UTF-8
+@article{hudson2018compositional,
+	author    = {Drew A. Hudson and Christopher D. Manning},
+	title     = {Compositional attention networks for machine reasoning},
+	journal   = {International Conference on Learning Representations},
+	year      = {2018},
+	eprint       = {1803.03067},
+	eprinttype   = {arxiv},
+}
+
 @InProceedings{antol2015, 
 	author = {Stanislaw Antol and Aishwarya Agrawal and Jiasen Lu and Margaret Mitchell and Dhruv Batra and C. Lawrence Zitnick and Devi Parikh}, 
 	title = {{VQA}: {V}isual {Q}uestion {A}nswering}, 
